# Melodica

./: .gitignore  .gitmodules  .mutmut-cache  CLAUDE.md  DSP_MASTERING.md  Generators.md  README.md  REVISE_31.05.26.md  TECH_INFO.md  TODO.md  WORK.md  analyze_random_midi.py  conftest.py  coverage_report.py  demo_coverage.py  diagnose_coupling.py  diagnose_harmony.py  diagnose_mastering.py  edo_tensei.mid  eight_o_eight.mid  find_patterns.py  hook_lab.html  lab  long_test.py  mutmut_pytest.ini  pchange_metal.npy  pnote_metal.txt  pyproject.toml  roblox_new_hmm.mid  roblox_uplift.mid  run_coverage.py  test_output.mid  todo.md
demos/: demo_advanced_automation.py  demo_auto_fantasy.py  demo_game_music.py  demo_masterpiece_dark_fantasy.py  demo_polished_fantasy.py  demo_song_generator.py  demo_traced_album.py  demo_traced_dark_fantasy.py  demo_traced_masterpiece.py  demo_traced_song.py  demo_traced_symphony.py  demo_traced_voice_leading.py  demo_virtuoso_symphony.py  demo_voice_leading.py
docs/: BeatArrangement.md  COMPOSITION_GUIDELINES.md  ContinuousAlbumMode.md  FibrilSymphony.md  FollowTrackRhythm.md  Generators.md  HARMONIZATION_CEILING.md  HARMONIZER_VOCABULARY.md  HMM_TRAINING_GOLD_STANDARD.md  Instruments.md  Modifiers_and_Pipeline.md  PhraseSchedules.md  SONGWRITING.md  TONALITY_COVERAGE.md  TZ_ORCHESTRAL_ARRANGER.md  form_validation_rules.md  harmonize_todo.md  melody_countermelody_handover.md
hook_ml/: README.md  generator_model.py  hook_lab.html  mlx_architecture_review.md  run_generator.py  server.py  train_memorability99.py  z_notation_model.md
(+1798 files in other folders)
